# moos-ivp-learn

./: CMakeLists.txt  README.md
docker/2680_image/: Dockerfile  README.md
docker/base_moos_ivp_image/: Dockerfile  README.md
missions/alpha_learn/: .gitignore  default-vpositions.txt  init_field.sh  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  mit_06.txt  mit_rand.txt  neural_network_abe.csv  neural_network_config.csv  plugs.moos
missions/alpha_learn/16sectors/: neural_network_abe1.csv
missions/alpha_learn/net-bv/: 2025-08-13.lima.50gens_20rpi.trial_0.gen_30.team_31_inds_0.rollout_0.neural_network_abe1.csv  2025-08-13.mike.multiagent.four-agents.trial_0.gen_7.team_23_inds_46_5_2_16.rollout_0.neural_network_abe1.csv  2025-08-13.mike.multiagent.four-agents.trial_0.gen_7.team_23_inds_46_5_2_16.rollout_0.neural_network_abe2.csv  2025-08-13.mike.multiagent.four-agents.trial_0.gen_7.team_23_inds_46_5_2_16.rollout_0.neural_network_abe3.csv  2025-08-13.mike.multiagent.four-agents.trial_0.gen_7.team_23_inds_46_5_2_16.rollout_0.neural_network_abe4.csv  first-run-gen-63-ind-13.csv  first-run-gen-63-ind-18.csv  first-run-gen-63-ind-2.csv  first-run-gen-63-ind-20.csv  first-run-gen-63-ind-30.csv  first-run-gen-63-ind-31.csv
missions/alpha_learn/net-bv/2025_09_04/: neural_network_abe1.csv  neural_network_abe2.csv  neural_network_abe3.csv  neural_network_abe4.csv
missions/alpha_learn/net-bv/2025_09_09/: neural_network_abe1.csv  neural_network_abe2.csv  neural_network_abe3.csv  neural_network_abe4.csv  neural_network_abe5.csv  neural_network_abe6.csv  neural_network_abe7.csv  neural_network_abe8.csv
missions/alpha_learn/test_swim_files/: swimmers.5.c1.txt  swimmers.5.c2.txt  swimmers.5.c3.txt  swimmers.5.c4.txt  swimmers.5.c5.txt
resources/test/: a.csv  alog.test  incorrect_extradigit.csv  incorrect_extraline.csv  incorrect_removedigit.csv
scripts/: generate_net_params.ipynb  learnKill  network.py  run_sweep  run_sweep.py
src/: CMakeLists.txt
src/general_utils/: CMakeLists.txt  cli_filter_duplicate_rows.cpp  cli_merge_csv_files.cpp  cli_process_node_reports.cpp  general_utils.cpp  general_utils.h  test_utils.cpp
src/ivp_behavior_extend/: CMakeLists.txt  ivp_behavior_extend.cpp  ivp_behavior_extend.h
src/lib_BHV_follow_com/: BHV_FollowCOM.cpp  BHV_FollowCOM.h  CMakeLists.txt
src/lib_BHV_max_reading/: BHV_MaxReading.cpp  BHV_MaxReading.h  CMakeLists.txt
src/lib_BHV_neural_network/: BHV_Neural_Network.cpp  BHV_Neural_Network.h  CMakeLists.txt
src/lib_behaviors-test/: BHV_SimpleWaypoint.cpp
src/neural_network/: CMakeLists.txt  network.h  network.hpp  out.txt  test_layer.cpp  test_network.cpp  test_node.cpp
src/pMissionMonitor/: CMakeLists.txt  MissionMonitor.cpp  MissionMonitor.h  MissionMonitor_Info.cpp  MissionMonitor_Info.h  main.cpp
src/pSectorSense/: CMakeLists.txt  SectorSense.cpp  SectorSense.h  SectorSense_Info.cpp  SectorSense_Info.h  main.cpp
src/pSimpleControl/: CMakeLists.txt  SimpleControl.cpp  SimpleControl.h  SimpleControl_Info.cpp  SimpleControl_Info.h  main.cpp
src/sector_sensor/: CMakeLists.txt  sector_sensor.cpp  sector_sensor.h  test_sensor.cpp
src/uFldRecordKeeper/: CMakeLists.txt  FldRecordKeeper.cpp  FldRecordKeeper.h  FldRecordKeeper_Info.cpp  FldRecordKeeper_Info.h  main.cpp
